syntax = "proto3";
package product;
option go_package = "product";

message RequestEmpty {}

message Gastronomie { string name = 1; }

message Coordinate {
  float lon = 1;
  float lat = 2;
}

message Accompaniment { string name = 1; }

message MenuLink { string id = 1; }

message Picture { string src = 1; }

message Schedule {
  string date = 1;
  string start_am = 2;
  string end_am = 3;
  string start_pm = 4;
  string end_pm = 5;
}

message Product {
  string name = 1;
  string place_logo = 2;
  int32 price = 3;
  string phone = 4;
  string description = 5;
  repeated Gastronomie gastronomie = 6;
  int32 cooking_time = 7;
  Coordinate location = 8;
  string address = 9;
  string cpc = 10;
  int32 like = 11;
  repeated string recipes = 12;
  repeated Accompaniment accompaniment = 13;
  string place_name = 14;
  string place_ref = 15;
  MenuLink menus_link = 16;
  int32 notation = 17;
  int32 discount = 18;
  string size = 19;
  int32 quantity = 20;
  int32 spicy_level = 21;
  string category = 22;
  repeated Picture picture = 23;
  int32 main_picture = 24;
  repeated Schedule schedule = 25;
  string id = 26; 
  string type = 27; 
}

message ProductAPIResponse {
  int64 total = 1;
  repeated Product data = 2;
}
message ListResponse {
  int32 status = 1;
  string error = 2;
  int64 total = 3;
  repeated Product data = 4;
}

message CreateResponse {
  int32 status = 1;
  string id = 2;
  string error = 3;
}

message ID {
  string id = 1;
}

message DeleteResponse {
  int32 status = 1;
  string error = 2;
}

message UpdateResponse {
  int32 status = 1;
  string error = 2;
}

message DetailResponse {
  int32 status = 1;
  string error = 2;
  Product data = 4;
}

message SearchRequest {
  string q = 1;
  int32 from = 2;
  int32 to = 3;
}

service ProductService {
  rpc Search(SearchRequest) returns (ListResponse);
  rpc GetDetail(ID) returns (DetailResponse);
  rpc AddProduct(Product) returns (CreateResponse);
  rpc UpdateProduct(Product) returns (UpdateResponse);
  rpc DeleteProduct(ID) returns (DeleteResponse);
}